better scrolling in popup list

--- a/source/popup.html
+++ b/source/popup.html
@@ -35,7 +35,9 @@
 
 <div id="status">No torrents</div>
 <ul id="list_hidden"></ul>
-<ul id="list"></ul>
+<div id='list_wrapper'>
+	<ul id="list"></ul>
+</div>
 
 <ul id="menu">
 	<li onclick="chrome.windows.create({ url: 'basket.html', type: 'popup', width: 384, height: 384 });">Upload Basket</li>
