--- a/source/downloadTorrent.html
+++ b/source/downloadTorrent.html
@@ -4,7 +4,7 @@
 
 <title>Save Torrent</title>
 <link rel="stylesheet" type="text/css" href="css/downloadTorrent.css" />
-<script type="text/javascript" src="js/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="js/jquery-1.7.js"></script>
 
 </head>
 
