--- a/source/downloadTorrent.html
+++ b/source/downloadTorrent.html
@@ -123,6 +123,7 @@ chrome.extension.onRequest.addListener(function (request, sender) {
 
 	boxes = document.querySelectorAll('input.listChkBox');
 
+	//TODO: replace array with string
 	function getNotSelectedFilesIds() {
 		var list = [];
 
