Add Browser action timeout control select box
Still need to implement actual functionality.

--- a/source/options.html
+++ b/source/options.html
@@ -56,6 +56,22 @@
 				<input id="notifications" type="checkbox" />
 				<div class="clear"></div>
 			</li>
+			<li>
+				<label class="section" for="notifications">
+					Browser Icon Notification Timeout<br />
+					<span class="small">(change how long add/dup/fail is displayed)</span>
+				</label>
+				<select id="browsernotificationtimeout">
+					<option value="100">100ms</option>
+					<option value="250">250ms</option>
+					<option value="500">500ms</option>
+					<option value="1000">1s</option>
+					<option value="2000">2s</option>
+					<option value="5000">5s</option>
+					<option value="10000">10s</option>
+				</select>
+				<div class="clear"></div>
+			</li>
 		</ul>
 	</fieldset>
 	<fieldset>
