--- a/source/options.html
+++ b/source/options.html
@@ -58,8 +58,8 @@
 			</li>
 			<li>
 				<label class="section" for="notifications">
-					Browser Icon Notification Timeout<br />
-					<span class="small">(change how long add/dup/fail is displayed)</span>
+					Icon Notification Timeout<br />
+					<span class="small">(how long add/dup/fail is shown)</span>
 				</label>
 				<select id="browsernotificationtimeout">
 					<option value="100">100ms</option>
