--- a/source/options.html
+++ b/source/options.html
@@ -57,7 +57,7 @@
 				<div class="clear"></div>
 			</li>
 			<li>
-				<label class="section" for="notifications">
+				<label class="section" for="browsernotificationtimeout">
 					Icon Notification Timeout<br />
 					<span class="small">(how long add/dup/fail is shown)</span>
 				</label>
