--- a/source/downloadTorrent.html
+++ b/source/downloadTorrent.html
@@ -4,8 +4,9 @@
 
 <title>Save Torrent</title>
 <link rel="stylesheet" type="text/css" href="css/downloadTorrent.css" />
-<script type="text/javascript" src="js/jquery-1.7.js"></script>
-
+<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/downloadTorrent.js"></script>
+<meta name="google" value="notranslate">
 </head>
 
 <body>
@@ -15,6 +16,11 @@
 	<li>
 		<label id="downloadLabel" for="downloadLocations">Save in folder:</label>
 		<select id="downloadLocations"></select>
+		<div class="clear"></div>
+	</li>
+	<li>
+		<label id="downloadPaused" for="downloadPauseTorrent">Pause torrent:</label>
+		<input id="downloadPauseTorrent" type="checkbox">
 		<div class="clear"></div>
 	</li>
 	<li id="filesContainer">
@@ -29,6 +35,9 @@
 				<th class="size">
 					Size
 				</th>
+				<th class="priority">
+					Priority
+				</th>
 			</tr>
 		</table>
 	</li>
@@ -37,143 +46,6 @@
 <button id="save">Save</button>
 <button id="cancel">Cancel</button>
 <div class="clear"></div>
-
-<script type="text/javascript">
-
-// credit to: http://web.elctech.com/2009/01/06/convert-filesize-bytes-to-readable-string-in-javascript/
-// modified to allow for 0 bytes and removed extraneous Math.floor
-function formatBytes(bytes) {
-	if (bytes < 1) return '0 bytes';
-
-	var s = [ 'bytes', 'KB', 'MB', 'GB', 'TB', 'PB' ],
-		e = Math.floor(Math.log(bytes) / Math.log(1024));
-
-	if (e > 2) return (bytes / Math.pow(1024, e)).toFixed(2) + ' ' + s[e];
-
-	return (bytes / Math.pow(1024, e)).toFixed(1) + ' ' + s[e];
-}
-
-function decodeString(s) {
-	var r;
-	try {
-		r = decodeURIComponent( escape( s ) );
-	} catch (e) {
-		r = decodeBytes(s, 'cp1251');
-	}
-	return r;
-}
-
-function createCheckBox(id) {
-	var chkBox = document.createElement('input');
-	chkBox.type = 'checkbox';
-	chkBox.name = 'chkFile' + id;
-	chkBox.id = 'chkFile' + id;
-	chkBox.defaultChecked = true;
-	chkBox.className = 'listChkBox';
-	return chkBox;
-}
-
-// populate the download popup with the torrent information
-chrome.extension.onRequest.addListener(function (request, sender) {
-	var select = document.getElementById('downloadLocations'),
-		option,
-		table = document.getElementById('files'),
-		row,
-		boxes;
-
-	var name = decodeString(request.torrent.info.name);
-
-	// add the name of the torrent
-	document.getElementById('torrentName').innerHTML = name;
-
-	// add the list of download directories
-	if (request.dirs.length === 0) {
-		select.disabled = 'disabled';
-
-		// create the default directory download option
-		option = document.createElement('option');
-		option.text = '< Default Directory >';
-		option.value = '';
-
-		select.add(option, null);
-	} else {
-		for (var i = 0, dir; dir = request.dirs[i]; ++i) {
-			option = document.createElement('option');
-			option.text = decodeString(dir.label);
-			option.value = dir.dir;
-
-			select.add(option, null);
-		}
-	}
-
-	// how many files are in the torrent?
-	if (typeof request.torrent.info.files === 'undefined') {		// 1
-		row = table.insertRow(-1);
-		row.insertCell(-1).appendChild(createCheckBox(0));
-		row.insertCell(-1).appendChild(document.createTextNode(decodeString(name)));
-		row.insertCell(-1).appendChild(document.createTextNode(formatBytes(request.torrent.info.length)));
-	} else {		// multiple
-		for (var i = 0, file; file = request.torrent.info.files[i]; ++i) {
-			row = table.insertRow(-1);
-			row.insertCell(-1).appendChild(createCheckBox(i));
-			row.insertCell(-1).appendChild(document.createTextNode(decodeString(file.path.join('/'))));
-			row.insertCell(-1).appendChild(document.createTextNode(formatBytes(file.length)));
-		}
-	}
-
-	boxes = document.querySelectorAll('input.listChkBox');
-
-	//TODO: replace array with string
-	function getNotSelectedFilesIds() {
-		var list = [];
-
-		for(var i = 0, l = boxes.length; i < l; i++) {
-			if(!boxes.item(i).checked) {
-				list.push(i);
-			}
-		}
-		return list;
-	}
-
-	$('#checkAll').change( function(e) {
-		for(var i = 0, l = boxes.length; i < l; i++) {
-			boxes.item(i).checked = e.target.checked;
-		}
-	});
-
-	$('#save').click( function (e) {
-		chrome.extension.sendRequest({
-				'data': request.data
-			,	'dir': select.options[select.selectedIndex].value
-			,	'blacklist': getNotSelectedFilesIds() // "files-wanted" not work for some reason
-		});
-		window.close();
-	});
-
-	$('#cancel').click( function (e) {
-		window.close();
-	});
-});
-
-function decodeBytes(bytes, encoding) {
-	var encodings= {
-		// Windows code page 1252 Western European
-		//
-		cp1252: '\x00\x01\x02\x03\x04\x05\x06\x07\x08\t\n\x0b\x0c\r\x0e\x0f\x10\x11\x12\x13\x14\x15\x16\x17\x18\x19\x1a\x1b\x1c\x1d\x1e\x1f !"#$%&\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~\x7f\u20ac\ufffd\u201a\u0192\u201e\u2026\u2020\u2021\u02c6\u2030\u0160\u2039\u0152\ufffd\u017d\ufffd\ufffd\u2018\u2019\u201c\u201d\u2022\u2013\u2014\u02dc\u2122\u0161\u203a\u0153\ufffd\u017e\u0178\xa0\xa1\xa2\xa3\xa4\xa5\xa6\xa7\xa8\xa9\xaa\xab\xac\xad\xae\xaf\xb0\xb1\xb2\xb3\xb4\xb5\xb6\xb7\xb8\xb9\xba\xbb\xbc\xbd\xbe\xbf\xc0\xc1\xc2\xc3\xc4\xc5\xc6\xc7\xc8\xc9\xca\xcb\xcc\xcd\xce\xcf\xd0\xd1\xd2\xd3\xd4\xd5\xd6\xd7\xd8\xd9\xda\xdb\xdc\xdd\xde\xdf\xe0\xe1\xe2\xe3\xe4\xe5\xe6\xe7\xe8\xe9\xea\xeb\xec\xed\xee\xef\xf0\xf1\xf2\xf3\xf4\xf5\xf6\xf7\xf8\xf9\xfa\xfb\xfc\xfd\xfe\xff',
-
-		// Windows code page 1251 Cyrillic
-		//
-		cp1251: '\x00\x01\x02\x03\x04\x05\x06\x07\x08\t\n\x0b\x0c\r\x0e\x0f\x10\x11\x12\x13\x14\x15\x16\x17\x18\x19\x1a\x1b\x1c\x1d\x1e\x1f !"#$%&\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~\x7f\u0402\u0403\u201a\u0453\u201e\u2026\u2020\u2021\u20ac\u2030\u0409\u2039\u040a\u040c\u040b\u040f\u0452\u2018\u2019\u201c\u201d\u2022\u2013\u2014\ufffd\u2122\u0459\u203a\u045a\u045c\u045b\u045f\xa0\u040e\u045e\u0408\xa4\u0490\xa6\xa7\u0401\xa9\u0404\xab\xac\xad\xae\u0407\xb0\xb1\u0406\u0456\u0491\xb5\xb6\xb7\u0451\u2116\u0454\xbb\u0458\u0405\u0455\u0457\u0410\u0411\u0412\u0413\u0414\u0415\u0416\u0417\u0418\u0419\u041a\u041b\u041c\u041d\u041e\u041f\u0420\u0421\u0422\u0423\u0424\u0425\u0426\u0427\u0428\u0429\u042a\u042b\u042c\u042d\u042e\u042f\u0430\u0431\u0432\u0433\u0434\u0435\u0436\u0437\u0438\u0439\u043a\u043b\u043c\u043d\u043e\u043f\u0440\u0441\u0442\u0443\u0444\u0445\u0446\u0447\u0448\u0449\u044a\u044b\u044c\u044d\u044e\u044f'
-	};
-    var enc= encodings[encoding];
-    var n= bytes.length;
-    var chars= new Array(n);
-    for (var i= 0; i<n; i++)
-        chars[i]= enc.charAt(bytes.charCodeAt(i));
-    return chars.join('');
-}
-
-</script>
 
 </body>
 </html>
