--- a/source/options.html
+++ b/source/options.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Remote Transmission Options</title>
 	<link rel="stylesheet" type="text/css" href="css/options.css" />
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="js/options.js"></script>
 </head>
 
 <body>
@@ -35,12 +37,12 @@
 			<li><br /></li>
 			<li>
 				<label class="section" for="user">Username</label>
-				<input id="user" type="password" onfocus="this.type = 'text';" onblur="this.type = 'password';" />
+				<input id="user" type="password" />
 				<div class="clear"></div>
 			</li>
 			<li>
 				<label class="section" for="pass">Password</label>
-				<input id="pass" type="password" onfocus="this.type = 'text';" onblur="this.type = 'password';" />
+				<input id="pass" type="password" />
 				<div class="clear"></div>
 			</li>
 		</ul>
@@ -78,52 +80,52 @@
 		<legend>Download</legend>
 		<ul>
 			<li>
-				<label class="section">
-					Default Click Action
-				</label>
-				<div class="options">
-					<input id="dlremote" name="clickaction" type="radio" />
-					<label for="dlremote">Download the torrent file with the remote Transmission server</label><br />
-					<span class="small" style="padding-left: 17px;">(to download locally, right-click and select "Save Link As...")</span><br />
-					<input id="dllocal" name="clickaction" type="radio" />
-					<label for="dllocal">Download the torrent file locally</label><br />
-					<span class="small" style="padding-left: 17px;">(to download using the remote Transmission server, right-click and select "Download with Remote Transmission")</span>
-				</div>
-				<div class="clear"></div>
+				<fieldset>
+					<legend>Default Click Action</legend>
+					<div class="options">
+						<input id="dlremote" name="clickaction" type="radio" />
+						<label for="dlremote">Download the torrent file with the remote Transmission server</label><br />
+						<span class="small" style="padding-left: 17px;">(to download locally, right-click and select "Save Link As...")</span><br />
+						<input id="dllocal" name="clickaction" type="radio" />
+						<label for="dllocal">Download the torrent file locally</label><br />
+						<span class="small" style="padding-left: 17px;">(to download using the remote Transmission server, right-click and select "Download with Remote Transmission")</span>
+					</div>
+					<div class="clear"></div>
+				</fieldset>
 			</li>
 			<li>
-				<label class="section">Location</label>
-				<div class="options">
-					<input id="dldefault" name="dlocation" type="radio" onclick="document.getElementById('dlpopup').disabled = false;" />
-					<label for="dldefault">Always use the default directory</label><br />
-					<blockquote>
-						<input id="dlpopup" type="checkbox" />
-						<label for="dlpopup">Show download popup</label><br />
-					</blockquote>
-					<input id="dlcustom" name="dlocation" type="radio" onclick="document.getElementById('dlpopup').disabled = true;" />
-					<label for="dlcustom">Choose a custom directory</label><br />
-					<table id="customdirs">
-						<tr>
-							<th>Label</th>
-							<th>Directory</th>
-							<th></th>
-						</tr>
-						<tr class="addcustom">
-							<td><input id="customlabel" class="label" type="text" /></td>
-							<td><input id="customdir" class="dir" type="text" /></td>
-							<td>
-								<button id="adddir" onclick="addDir(document.getElementById('customlabel').value, document.getElementById('customdir').value);">Add</button>
-							</td>
-						</tr>
-					</table>
-				</div>
-				<div class="clear"></div>
+				<fieldset>
+					<legend>Location</legend>
+					<div class="options">
+						<input id="dldefault" name="dlocation" type="radio" onclick="document.getElementById('dlpopup').disabled = false;" />
+						<label for="dldefault">Always use the default directory</label><br />
+						<blockquote>
+							<input id="dlpopup" type="checkbox" />
+							<label for="dlpopup">Show download popup</label><br />
+						</blockquote>
+						<input id="dlcustom" name="dlocation" type="radio" onclick="document.getElementById('dlpopup').disabled = true;" />
+						<label for="dlcustom">Choose a custom directory</label><br />
+						<table id="customdirs">
+							<tr>
+								<th>Label</th>
+								<th>Directory</th>
+								<th></th>
+							</tr>
+							<tr class="addcustom">
+								<td><input id="customlabel" class="label" type="text" /></td>
+								<td><input id="customdir" class="dir" type="text" /></td>
+								<td>
+									<button id="adddir" onclick="addDir(document.getElementById('customlabel').value, document.getElementById('customdir').value);">Add</button>
+								</td>
+							</tr>
+						</table>
+					</div>
+					<div class="clear"></div>
+				</fieldset>
 			</li>
 		</ul>
 	</fieldset>
-	<button id="save" onclick="save();">Save</button> <span id="saved">Settings saved.</span>
+	<button id="save">Save</button> <span id="saved">Settings saved.</span>
 </div>
-
-<script type="text/javascript" src="js/options.js"></script>
 </body>
 </html>
