--- a/source/popup.html
+++ b/source/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/popup.css" />
-	<script type="text/javascript" src="js/jquery-1.7.js"></script>
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 </head>
 
 <body>
