--- a/source/popup.html
+++ b/source/popup.html
@@ -1,52 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="css/popup.css" />
-	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-</head>
-
-<body>
-
-<div id="header">
-	<div id="global_stats">
-		Torrents: <b><span id="global_torrents"> </span></b><br />
-		Downloading: <b><span id="global_downloading"> </span></b> Seeding: <b><span id="global_seeding"> </span></b><br />
-		Paused/Completed: <b><span id="global_pausedcompleted"> </span></b>
-	</div>
-	<div id="global_speeds">
-		DL: <b><span id="global_downloadrate"> </span></b> UL: <b><span id="global_uploadrate"> </span></b>
-	</div>
-</div>
-
-<div id="bar">
-	<div id="menu_button"></div>
-	<div id="turtle_button" title="Toggle turtle mode"></div>
-	<span id="filter">
-		<input id="filter_input" type="text" />
-		<div id="filter_clear"></div>
-	</span>
-	<select id="filter_type">
-		<option value="0">All</option>
-		<option value="4">Downloading</option>
-		<option value="8">Seeding</option>
-		<option value="16">Paused/Completed</option>
-	</select>
-</div>
-
-<div id="status">No torrents</div>
-<ul id="list_hidden"></ul>
-<div id='list_wrapper'>
-	<ul id="list"></ul>
-</div>
-
-<ul id="menu">
-	<li onclick="chrome.windows.create({ url: 'basket.html', type: 'popup', width: 384, height: 384 });">Upload Basket</li>
-	<li onclick="chrome.tabs.create({ url: localStorage.server + localStorage.webPath })">Full Web Interface</li>
-</ul>
-
-<script type="text/javascript" src="js/class.js"></script>
-<script type="text/javascript" src="js/popup.js"></script>
-<script type="text/javascript" src="js/events.js"></script>
-
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>popup</title>
+		<link rel="stylesheet" type="text/css" href="css/popup.css" />
+		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="js/popup.js"></script>
+		<script type="text/javascript" src="js/events.js"></script>
+		<script type="text/javascript" src="js/class.js"></script>
+	</head>
+	<body>
+		<div id="header">
+			<div id="global_stats">Torrents: <b><span id="global_torrents"> </span></b>
+				<br />Downloading: <b><span id="global_downloading"> </span></b> Seeding: <b><span id="global_seeding"> </span></b>
+				<br />Paused/Completed: <b><span id="global_pausedcompleted"> </span></b>
+			</div>
+			<div id="global_speeds">DL: <b><span id="global_downloadrate"> </span></b> UL: <b><span id="global_uploadrate"> </span></b>
+			</div>
+		</div>
+		<div id="bar">
+			<div id="menu_button"></div>
+			<div id="turtle_button" title="Toggle turtle mode"></div>
+			<div id="filter">
+				<input id="filter_input" type="text" />
+				<div id="filter_clear"></div>
+			</div>
+			<select id="filter_type">
+				<option value="0">All</option>
+				<option value="4">Downloading</option>
+				<option value="8">Seeding</option>
+				<option value="16">Paused/Completed</option>
+			</select>
+		</div>
+		<div id="status">No torrents</div>
+		<ul id="list_hidden"></ul>
+		<div id='list_wrapper'>
+			<ul id="list"></ul>
+		</div>
+		<ul id="menu">
+			<li id="uploadBasket">Upload Basket</li>
+			<li id="fullWebUI">Full Web Interface</li>
+		</ul>
+	</body>
 </html>
