Fix saving/loading/displaying custom dirs

--- a/source/options.html
+++ b/source/options.html
@@ -105,19 +105,14 @@
 				<fieldset>
 					<legend>Location</legend>
 					<div class="options">
-						<input id="dldefault" name="dlocation" type="radio" />
-						<label for="dldefault">Always use the default directory</label><br />
-						<blockquote>
-							<input id="dlpopup" type="checkbox" />
-							<label for="dlpopup">Show download popup</label><br />
-						</blockquote>
-						<input id="dlcustom" name="dlocation" type="radio" />
-						<label for="dlcustom">Choose a custom directory</label><br />
+						<input id="dlpopup" type="checkbox" />
+						<label for="dlpopup">Show download popup</label><br><br>
+						<label for="customdirs"><b>Custom Directories</b><br>Add custom directories below. These custom directories will show up in the download popup.</label>
 						<table id="customdirs">
 							<tr>
 								<th>Label</th>
 								<th>Directory</th>
-								<th></th>
+								<th>&nbsp;</th>
 							</tr>
 							<tr class="addcustom">
 								<td><input id="customlabel" class="label" type="text" /></td>
